Signup and login requests are done and tested
