# controllers/login.js
@@ -11,8 +11,13 @@ const createToken = (_id) => {
 module.exports.loginUser = async (req, res) => {
     const { email, password } = req.body;
     try {
-        const user = await User.login(email, password)
-    } catch {
-        
+        const user = await User.login(email, password);
+
+        // create a JWT
+        const token = createToken(user._id);
+
+        res.status(200).json({ email, token });
+    } catch (error) {
+        res.status(400).json({ error: error.message });
     }
 }
